[tool.poetry]
name = "cron-schedule"
version = "1.1"
description = "基于cron表达式的定时任务"
authors = ["miclon <jcnd@163.com>"]
keywords = ["cron", "定时任务", "schedule"]
packages = [
    { include = 'schedule', from = 'src' }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
croniter = "^1.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
